# Optimized-Gemini-Context-Caching-RAG

./: .gitignore  README.md  pyproject.toml
inputs/: transcript.txt
src/: __main__.py  embed_retrieve.py  ingest.py  pipeline.py  qa_mock.py  summarize.py  utils.py
tests/: __init__.py  test_ingest.py
